Bug 145258 - Comments cut-off in writer
Summary: Comments cut-off in writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.2.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords:
: 145368 (view as bug list)
Depends on:
Blocks: Weld-Writer-Comments
  Show dependency treegraph
 
Reported: 2021-10-21 14:24 UTC by Andy
Modified: 2021-12-21 09:57 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
an example of a page with comments with the problem (red arrows) (201.77 KB, image/png)
2021-10-21 14:25 UTC, Andy
Details
comment cut off, test document LO nightly 2021-10-29 on macOS 11.6.1 (228.00 KB, image/png)
2021-10-29 14:00 UTC, steve
Details
comment cut off, test document (8.94 KB, application/vnd.oasis.opendocument.text)
2021-10-29 14:00 UTC, steve
Details
An ODT files displaying the problem, as requested (23.77 KB, application/vnd.oasis.opendocument.text)
2021-10-29 18:06 UTC, Andy
Details
The screen capture of the diplay of the previous ODT file on my PC, with red arrows added to show where the problem is (282.27 KB, image/png)
2021-10-29 18:07 UTC, Andy
Details
Screenshots of LO3.3 displaying the same file with comments 100% correctly (487.44 KB, image/jpeg)
2021-11-04 12:54 UTC, Andy
Details
2021-11-09 main build verified (1.24 MB, image/png)
2021-11-09 09:08 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2021-10-21 14:24:32 UTC
Description:
The side view of the comments no the main text in Writer now has boxes of uncorrect size: some lines of text in them are patially cut out of view

Steps to Reproduce:
1. Open any writer document, or create a new one. Insert a side comment (shown on the right of the page)
2. in the box that appears, write some sentences
3. in most cases, the display of the last and/or the first line of text in the comment box is cut: the box size does not adjust correctly to shown the text completely, making it difficult to read. And there is no scroll bar to help with this

Actual Results:
See attached example document, and look at the boxes to which the red arrows point: The first or the line text line is not shown entirely, since the box is a bit too small to do so

Expected Results:
As it was in previous LO releases (this seems to be a regression), the comment text should be seen completely with its box that adapt its size to obtain a complete display, or should activate the vertical scroll bar to allow the user to scroll the text


Reproducible: Always


User Profile Reset: No



Additional Info:
see attached file
Comment 1 Andy 2021-10-21 14:25:37 UTC
Created attachment 175865 [details]
an example of a page with comments with the problem (red arrows)
Comment 2 Andy 2021-10-27 15:11:52 UTC
After further experimenting with comments, I realised that sometimes while you are writing a comment the block of existing text moves to the left, and thus the editing is even more difficult and awkward, since you do not see the lft side of the text block anymore.
In general, text editing in the comments has become quite fastidious, which is a clear regression since the interface it was almost perfect in previous releases.
Comment 3 Timur 2021-10-27 15:31:59 UTC
Please attach your source ODT. Also if you can please add screenshot of comment 2.
Comment 4 steve 2021-10-29 08:32:52 UTC
*** Bug 145368 has been marked as a duplicate of this bug. ***
Comment 5 steve 2021-10-29 08:33:52 UTC
New as per duplicate and OS -> all since duplicate was reported against linux and this here is for windows and I am aware comments field occasionally cuts-off comments on macOS as well.
Comment 6 Buovjaga 2021-10-29 08:52:57 UTC
I can't repro from scratch, so indeed someone needs to attach an example file. It would also be a good idea to test in Safe mode. Help - Restart in safe mode and then Continue in safe mode.

Arch Linux 64-bit
Version: 7.2.2.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: fi-FI
7.2.2-1
Calc: threaded
Comment 7 steve 2021-10-29 14:00:09 UTC
Created attachment 175999 [details]
comment cut off, test document LO nightly 2021-10-29 on macOS 11.6.1
Comment 8 steve 2021-10-29 14:00:32 UTC
Created attachment 176000 [details]
comment cut off, test document
Comment 9 Buovjaga 2021-10-29 16:57:34 UTC
Please, can someone who is able to reproduce this do a bibisect as this seems like a regression: https://wiki.documentfoundation.org/QA/Bibisect
Comment 10 Andy 2021-10-29 18:06:00 UTC
Created attachment 176006 [details]
An ODT files displaying the problem, as requested

The attachment next to this one is the screen capture of the open document, so as to allow to check if it is rendered differently on other PCs
Comment 11 Andy 2021-10-29 18:07:43 UTC
Created attachment 176007 [details]
The screen capture of the diplay of the previous ODT file on my PC, with red arrows added to show where the problem is
Comment 12 Caolán McNamara 2021-11-04 11:01:19 UTC
I can't reproduce this on Windows or macOS. The sidebar area seems relatively narrow in these screenshots vs what I get locally. There's a certain amount of customization visible in both screen shots, view, rulers, off I guess, but doing that doesn't seem to make a difference for me. Is there hidpi enabled or other customizations enabled ?
Comment 13 Andy 2021-11-04 12:54:10 UTC
I am sorry but i do not know what kind of setting "hidpi" is. I have tried to enable all possible options in the "Options - view" settings dialog. Bt default, I have "SKIA" activated and forced. So I checked things with Skia activated but not forced, then Skia disabled but hardware acceleration enabled, then both skia and hardware accel disabled. Nothing changes, the last row of side comments is always half hidden like in the attached screenshot.
Then I have checked any influence toolbars position or rulers display may have on this, to no avail: again, the glitch is there all the time.
Also, I tried changing the comments font, getting nowhere again; by the way, the side comments area is to me exactly as wide as it was in previous releases, when the text was displayed correctly without cutoffs.
IF you please would explain how do I edit the "hidpi" setting, I will try this out as well.
Finally, I fiddled a bit with the screen resolution and related settings of the notebook:
- First I tried to change the "modify the size of text, apps and other objects" setting in the "display" Win 10 dialog (please consider that the terms are not exactly the original english ones, but are the translation from Italian done by myself). Normally I have this setting fixed on 125%, and I have never changed it before. If I switch to 100%, the problem is the same; if I change it to 150%, things get better, the last text row of comments being almost fully visible instead than just the upper 50% visible. However this size is unusable, since it is too big, with many fixed-size dialog windows exceeding the desktop size.
- if I instead change the actual pixel resolution, down to 1600x900 from 1980x1020, there is a slight improvement, say the cutoff of the last text row of the comments is now some 30% instead of 50%. Again, however, for many uses downgrading the desktop resolution to less than the physical value (which is 1920x1080) is not sensible.
Please notice that both these settings had no influence on the Writer comments in previous releases, as I have checked on 3.3 (see attachment), where comments display is 100% perfect in all cases.
Thanks anyway
Comment 14 Andy 2021-11-04 12:54:56 UTC
Created attachment 176105 [details]
Screenshots of LO3.3 displaying the same file with comments 100% correctly
Comment 15 Buovjaga 2021-11-04 13:19:28 UTC
(In reply to Andy from comment #13)
> I am sorry but i do not know what kind of setting "hidpi" is. 

https://en.wikipedia.org/wiki/Pixel_density#Named_pixel_densities

> IF you please would explain how do I edit the "hidpi" setting, I will try
> this out as well.
> Finally, I fiddled a bit with the screen resolution and related settings of
> the notebook:
> - First I tried to change the "modify the size of text, apps and other
> objects" setting in the "display" Win 10 dialog (please consider that the
> terms are not exactly the original english ones, but are the translation
> from Italian done by myself). Normally I have this setting fixed on 125%,
> and I have never changed it before. If I switch to 100%, the problem is the
> same; if I change it to 150%, things get better, the last text row of
> comments being almost fully visible instead than just the upper 50% visible.
> However this size is unusable, since it is too big, with many fixed-size
> dialog windows exceeding the desktop size.

You have successfully edited the setting. It is display scaling in your Windows settings.
Comment 16 Caolán McNamara 2021-11-04 13:49:12 UTC
reproducible locally now on windows with scaling of 125%
Comment 17 Caolán McNamara 2021-11-07 20:32:38 UTC
While I was initially fixated on the multiline widget I think the problem is actually with the calculation of the height of the author/date fields
Comment 18 Commit Notification 2021-11-08 13:46:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17224bb22dadb8c6fa1dad32e2d1028bf356f485

tdf#145258 comments cut-off in writer under windows with 125% scaling

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Caolán McNamara 2021-11-08 13:47:51 UTC
fixed in trunk, backport to 7-2 in gerrit
Comment 20 steve 2021-11-09 09:08:42 UTC
Created attachment 176161 [details]
2021-11-09 main build verified
Comment 21 steve 2021-11-09 09:09:26 UTC
Verified on macOS.
Thanks Caolán!
Comment 22 Commit Notification 2021-11-11 15:47:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/7558ef949898e8f41a715ff335871450e3bb1a08

tdf#145258 comments cut-off in writer under windows with 125% scaling

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard
Comment 24 Andy 2021-12-10 10:18:34 UTC
In fact, nothing has actually changed in 7.2.4, which I tested today
Comment 25 Buovjaga 2021-12-10 10:24:17 UTC
(In reply to Andy from comment #24)
> In fact, nothing has actually changed in 7.2.4, which I tested today

Check the updated whiteboard: target:7.3.0 target:7.2.5
Comment 26 Andy 2021-12-21 09:56:55 UTC
(In reply to Buovjaga from comment #25)
> (In reply to Andy from comment #24)
> > In fact, nothing has actually changed in 7.2.4, which I tested today
> 
> Check the updated whiteboard: target:7.3.0 target:7.2.5

It looks like it is OK now. Done a few testing