tdf#145258 comments cut-off in writer under windows with 125% scaling

Change-Id: Ic255681075e3ff2d80723071d78bdcc64a8d9bb5